# FASTAPI-POSTGRE_website_core_template

./: README.md  docker-compose.yml  pyproject.toml
shop-application/: .env.template  main.py
shop-application/alembic/: env.py
shop-application/alembic/versions/: 2025_03_17_0310-8af7e6baa775_create_users_table.py  2025_03_17_0340-3d39b0e94f2f_create_users_table.py  2025_03_17_0347-e27f13289a9b_upgrade_users_table.py
shop-application/api/api_v1/: __init__.py  users.py
shop-application/api/api_v1/crud/: users.py
shop-application/core/: config.py
shop-application/core/models/: __init__.py  base.py  db_helper.py  user.py
shop-application/core/schemas/: user.py
shop-application/utils/: __init__.py  case_converter.py  case_convertor.py
